# spring22-jam-team-5

./: .gitignore  .gitmodules  README.md
Assets/Textures/: Sprite-0001.aseprite  explode.aseprite
Code/: CMakeLists.txt
Code/Game/: CMakeLists.txt  main.cpp
Code/Game/Display/: Audio.cpp  Audio.h  Camera.cpp  Camera.h  Display.cpp  Display.h
Code/Game/Entity/: Entity.cpp  Entity.h  IComponent.h
Code/Game/Entity/Components/: ColourShift.cpp  ColourShift.h  Pointer.cpp  Pointer.h  Timer.cpp  Timer.h
Code/Game/Entity/Entities/: BossShip.cpp  BossShip.h  Bullet.cpp  Bullet.h  EntityWithHealth.h  FatShip.cpp  FatShip.h  Player.cpp  Player.h  PlayerHeath.cpp  PlayerHeath.h  RunnerShip.cpp  RunnerShip.h  SeekerShip.cpp  SeekerShip.h  ShipSpawnerEntity.cpp  ShipSpawnerEntity.h  StandardShip.cpp  StandardShip.h  bossShip.cpp  bossShip.h  fatShip.cpp  fatShip.h  runnerShip.cpp  runnerShip.h
Code/Game/Level/: Level.cpp  Level.h
Code/Game/Prefix/: Bawl.pch
Code/Game/ResourceManagement/: FileReader.cpp  FileReader.h  TextureMap.cpp  TextureMap.h  TileMapEnum.h
Code/Game/State/: GameHandler.cpp  GameHandler.h  StateEntry.cpp  StateStack.cpp  StateStack.h  States.h
Code/Game/State/States/: EntityUpdateState.cpp  EntityUpdateState.h  EntryState.cpp  EntryState.h  GameState.cpp  GameState.h  IState.h  LevelLoadState.cpp  LevelLoadState.h  MainMenuState.cpp  MainMenuState.h  SpriteTransitionState.cpp  SpriteTransitionState.h  TestState.cpp  TestState.h  TextChoiceState.cpp  TextChoiceState.h
Code/Game/Sys/: NString.cpp  NString.h  Types.h
Code/Libs/: CMakeLists.txt
Team-5/ProjectSettings/: ProjectSettings.asset
code/game/: CMakeLists.txt
